--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "query": "^0.2.0",
+    "query-string": "^9.3.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "string": "^3.3.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
